<resources>
    <string name="app_name" translatable="false">RYTM</string>
    <string name="hello_blank_fragment">Welcome to RYTM</string>
    <string name="caches">Delete history</string>
    <string name="prev_search">History</string>
    <string name="settings">Settings</string>
    <string name="deleted_caches">All items have been deleted</string>
    <string name="how_to_use"><b>SOME INSTRUCTIONS</b>\n\n
        <i>SCREEN LOCK:</i> while playing a video, thanks to the central button, it is possible to block accidental touches to the screen by reducing the brightness to minimum to increase battery life.\n\n
        <i>PLAYBACK:</i> the function is available by pressing the home button on the phone, showing the currently playing content in the bubble. Music control is achieved by reopening the application.\n\n
        <i>DELETION:</i> deleting playlists or songs is done with a long click. NB: for history videos you must do this on the main screen and not on the player screen.\n\n
        <i>PLAYLISTS:</i> adding songs is possible thanks to the button at the top right of the video player.\n\n
    </string>
    <string name="about"><b>DATA INFO</b>\n\n
        <i>Some data may be manipulated by the owner of the API, i.e. Youtube, as indicated in the <a href="https://www.youtube.com/t/terms?hl=it">Terms and Conditions</a> and <a href="http://www.google.com/policies/privacy">Privacy Policy</a>.</i>
    </string>
    <string name="my_info">Developer website: <a href="http://riccardoventurini.dev">riccardoventurini.dev</a></string>
    <string name="placeholder">Enter title or link…</string>
    <string name="delete_confirmation_title">Delete this item?</string>
    <string name="delete_confirmation">Are you sure you want to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="restore">Cancel</string>
    <string name="add_playlist" translatable="false">create</string>
    <string name="error_empty_name">The playlist name cannot be empty</string>
    <string name="error_already_exist">The name entered already exists</string>
    <string name="select_playlist">Select a playlist</string>
    <string name="error_element_playlist_already_exist">Item already exists within the selected playlist</string>
    <string name="edit_playlist_name">Edit Playlist name</string>
    <string name="noty_title">RYTM is running</string>
    <string name="noty_text">Click on the notification to delete it</string>
    <string name="empty_playlists">No playlist present</string>
    <string name="empty_cronology">To get started, use the search bar or go to YouTube, click share and RYTM to watch videos without ads</string>
    <string name="generic_error">Unknown error</string>
    <string name="terms_title">Terms and Conditions</string>
    <string name="terms_text">The application uses the YouTube API service, before continuing please view and accept the <a href="https://www.youtube.com/t/terms?hl=it">Terms and Conditions</a> and <a href="http://www.google.com/policies/privacy">Privacy Policy</a></string>
    <string name="accept">Accept</string>
    <string name="confirm_delete_history">Confirm deletion of history</string>
    <string name="confirm_delete_history_message">Are you sure you want to eliminate all the chronology?</string>
    <string name="deleted_history">History deleted</string>
    <string name="create_playlist_first">Please create at least one playlist before proceeding.</string>
    <string name="playlists_button">Playlists</string>
    <string name="empty_playlist_title">Empty playlist</string>
    <string name="empty_playlist_text">This playlist is empty. To fill it, open a video and add it to the playlist.</string>
    <string name="buy_me_a_coffee" translatable="false">Buy me a coffee ☕</string>
    <string name="send_me_suggestions">Contact me</string>
    <string name="support_me">Support me</string>
    <string name="info_text">App created with ❤️ to watch videos while using other apps. You won\'t see ads because RYTM doesn\'t identify users</string>
    <string name="you_don_t_have_already_playlist_create_the_firstone">You don\'t have any playlists yet. Create your first one now!</string>
    <string name="playlists" translatable="false">Playlists</string>
    <string name="thx">Thanks for using the app!</string>
    <string name="buymeacoffee">Would you like a cast feature? Support me on Buy Me a Coffee ☕</string>
    <string name="supme">Support Me</string>
    <string name="later">Maybe later</string>
    <string name="explain_search">Press enter on your keyboard to search</string>
    <string name="lingua">Language</string>
    <string name="visita_il_mio_sito_web">Visit my website 🌎</string>
    <string name="valuta_l_app">Rate the app ⭐</string>
    <string name="save_minute">Save minute</string>
    <string name="tutorial" translatable="false">Tutorial 👀</string>
    <string name="limit_title">Daily Limit Reached</string>
    <string name="limit_message">All users have reached the daily request limit.\n
        Requests will be available again at midnight Los Angeles time.\n\n

        In the meantime, you can go to YouTube, tap Share on a video, and choose "Others" &gt; "RYTM" to keep listening.</string>
    <string name="support_title">Thanks for using the app!</string>
    <string name="support_message">Do you like RYTM? Support me on Buy Me a Coffee ☕</string>
    <string name="support_positive">Support Me</string>
    <string name="support_negative">Maybe later</string>
    <string name="intro_title_welcome">Welcome…</string>
    <string name="intro_desc_welcome">Welcome in RYTM, the app where you can see a youtube videos without ads and more…</string>
    <string name="intro_title_home">Home screen</string>
    <string name="intro_desc_home">1. Search videos or paste the link in searchbar\n\n2. You can create playlists to organise your videos\n\n3. You have the history of your research</string>
    <string name="intro_title_player">Player</string>
    <string name="intro_desc_player">1. Add a video to your playlist.\n\n3. Long-press to organize and swipe to delete\n\n4. Lock the screen to avoid accidental touches\n\n5. Set a timer if you want to fall asleep with a video</string>
    <string name="intro_title_pip">Watch your videos while you use others apps</string>
    <string name="intro_desc_pip">Try to minimize the app, you can continue to see the video while do other things</string>
    <string name="intro_title_limit">Daily limit reached?</string>
    <string name="intro_desc_limit">Sometimes, if a lot of users use my app, the requests can end up. In this case you can open videos directly from official app! You have to click share &gt; other &gt; RYTM and voilà</string>
    <string name="intro_title_end">…Let\'s get started!</string>
    <string name="intro_desc_end">Thank you to download this app, you can find this tutorial in setting if you need!</string>
    <string name="save_video_progress">Save video progress</string>
    <string name="intro_title_settings">AI dubbing or saving progress?</string>
    <string name="intro_desc_settings">By setting the app to the video\\\'s original language, AI dubbing will disappear. You can also now enable automatic saving of video progress!</string>
    <string name="code_source">Code-Source 💻</string>
    <string name="daily_end">Global requests exhausted. They will be available again in</string>
    <string name="daily_end2">To continue, open YouTube and use: Share → Open with RYTM</string>
    <string name="import_popup_title">Paste the link of playlist here</string>
    <string name="timer_title">Set the Timer</string>
    <string name="timer_text">Enter the number of minutes after which the app will close:</string>
    <string name="timer_cell">Enter a number of minutes (ex: 5)</string>
    <string name="timer_exit">Exit Timer</string>
    <string name="timer_exit_text">Timer is already running, do you want to stop it?</string>
    <string name="something_wrong">Something\'s wrong</string>
    <string name="send_report_summary">Send a report</string>
    <string name="support_work_summary">Support my work!</string>
    <string name="email_address">giordanobruno227@gmail.com</string>
    <string name="rate_app_summary">Leave a review on the Play Store</string>
    <string name="resources">Resources</string>
    <string name="tutorial_summary">See how to use RYTM</string>
    <string name="github_summary">View the code on GitHub</string>
    <string-array name="language_names"  translatable="false">
        <item>English</item>
        <item>العربية </item>
        <item>Deutsch</item>
        <item>Español</item>
        <item>Français</item>
        <item>हिंदी</item>
        <item>Italiano</item>
        <item>日本語</item>
        <item>Polski</item>
        <item>Português</item>
        <item>Русский</item>
        <item>Українська</item>
        <item>한국어</item>
    </string-array>
    <string-array name="language_codes" translatable="false">
        <item>en</item>
        <item>ar</item>
        <item>de</item>
        <item>es</item>
        <item>fr</item>
        <item>hi</item>
        <item>it</item>
        <item>ja</item>
        <item>pl</item>
        <item>pt</item>
        <item>ru</item>
        <item>uk</item>
        <item>ko</item>
    </string-array>
    <string name="pip_mode" translatable="false">Pip mode</string>
    <string name="general">General</string>
    <string name="videos_bookmark">Videos bookmark</string>
    <string name="pip_mode_summary">Picture in Picture mode</string>
    <string name="video_captions">Video captions</string>
    <string name="video_captions_summary">You can automatically enable or disable subtitles when the player starts</string>
    <string name="faq_title">Sign-in required?</string>
    <string name="faq_summary">Here some suggestions</string>
    <string name="share_app_title">Share with friends</string>
    <string name="about_title">About</string>
    <string name="version_summary">version …</string>
    <string name="pref_empty">empty</string>
    <string name="pref_empty_summary">empty</string>
    <string name="shake_sdk_dialog_feedback_type_item_bug">Report a bug</string>
    <string name="system_nav_bar_title">Permanent system commands</string>
    <string name="system_nav_bar_summary">Show system navigation commands at the bottom (Home, Back)</string>
    <string name="github_issue_error_title_empty">Title cannot be empty</string>
    <string name="github_issue_title_prefix">[User Report] %1$s</string>
    <string name="github_issue_user_description">**User description:**</string>
    <string name="github_issue_no_description">_No description provided._</string>
    <string name="github_issue_device_info">**Device info (automatic):**</string>
    <string name="github_issue_app_version">- App version: %1$s</string>
    <string name="github_issue_android_version">- Android version: %1$s (SDK %2$d)</string>
    <string name="github_issue_device">- Device: %1$s %2$s</string>
    <string name="settings_version">version %1$s</string>
    <string name="share_app_text">Check out RYTM! Watch YouTube videos without ads ! Download from PlayStore now : %1$s</string>
    <string name="share_app_subject">RYTM - Real YT Music</string>
    <string name="share_app_chooser_title">Share RYTM via…</string>
    <string name="faq_dialog_title">FAQ: YouTube Sign-in Requests</string>
</resources>