<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:title="@string/settings"
        app:layout="@layout/fragment_settings">
    </PreferenceCategory>

    <PreferenceCategory
        app:title="general">

        <ListPreference
            app:key="app_language"
            app:title="@string/lingua"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/language_names"
            app:entryValues="@array/language_codes"/>

        <SwitchPreferenceCompat
            app:key="save_minutes_enabled"
            app:title="@string/save_video_progress"
            app:summary="Videos bookmark"
            app:defaultValue="false" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/something_wrong">
        <Preference
            app:key="report_bug"
            app:title="@string/shake_sdk_dialog_feedback_type_item_bug"
            app:summary="@string/send_report_summary"/>
        <Preference
            app:key="faq"
            app:title="Sign-in required?"
            app:summary="Here some suggestions"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/support_me">

        <Preference
            app:key="buy_me_a_coffee"
            app:title="@string/buy_me_a_coffee"
            app:summary="@string/support_work_summary"/>

        <Preference
            app:key="rate_app"
            app:title="@string/valuta_l_app"
            app:summary="@string/rate_app_summary"/>

        <Preference
            app:key="share_app"
            app:title="Share with friends"/>

        <Preference
            app:key="visit_website"
            app:title="@string/visita_il_mio_sito_web"
            app:summary="riccardoventurini.dev"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/resources">

        <Preference
            app:key="tutorial"
            app:title="@string/tutorial"
            app:summary="@string/tutorial_summary"/>

        <Preference
            app:key="github"
            app:title="@string/code_source"
            app:summary="@string/github_summary"/>

        <Preference
            app:key="version"
            app:title="About"
            app:summary="version ..."/>

        <Preference
            app:key="empty"
            app:title="empty"
            app:summary="empty"/>

    </PreferenceCategory>

</PreferenceScreen>