<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.HomeActivity">

    <View
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/topbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/global_limit_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFA500"
            android:padding="5dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/subhome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/global_limit_banner">

            <ImageButton
                android:id="@+id/settings"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:fabCustomSize="32dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/transparent"
                android:src="@drawable/settings"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/welcome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/welcome"
                app:tint="@android:color/black" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxWidth="300dp"
                android:text="@string/app_name"
                android:fontFamily="@font/paytoneoneregular"
                android:textColor="@color/black"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/logo"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="2dp"/>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:src="@drawable/logo_dark"
                app:layout_constraintBottom_toBottomOf="@+id/welcome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/welcome"
                android:layout_marginStart="20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/line">

            <TextView
                android:id="@+id/playlist_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="35dp"
                android:focusable="true"
                android:text="@string/playlists"
                android:textStyle="bold"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_playlist"
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:fabCustomSize="36dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/red"
                android:src="@drawable/baseline_add_24"
                android:textAlignment="center"
                app:borderWidth="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/playlist_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/playlist_btn"
                app:tint="@android:color/white" />

            <TextView
                android:id="@+id/no_playlists"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:lineHeight="25sp"
                android:text="@string/you_don_t_have_already_playlist_create_the_firstone"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playlist_btn" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/playlist_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playlist_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/rectangle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="10dp"
            app:tint="@color/items"/>


        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/notosansmedium"
            android:background="@drawable/bg_search"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subhome"
            android:layout_marginTop="10dp"
            app:queryHint="@string/placeholder"
            app:queryBackground="@color/transparent"
            android:elevation="10dp"/>

        <TextView
            android:id="@+id/explain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explain_search"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/search_titles"
            app:layout_constraintStart_toStartOf="@+id/search_titles"
            app:layout_constraintTop_toBottomOf="@+id/line">
        </TextView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_button_modern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="search"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="16dp"
            app:iconPadding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/explain"
            app:layout_constraintStart_toStartOf="@+id/explain"
            app:layout_constraintTop_toBottomOf="@+id/explain"
            android:layout_marginTop="10dp"/>

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_titles" />

        <TextView
            android:id="@+id/last_search_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/prev_search"
            android:textColor="@color/background"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bottom" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_last_search"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:fabCustomSize="36dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/red"
            android:src="@drawable/trash"
            android:textAlignment="center"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/last_search_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/last_search_text"
            app:tint="@android:color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/songs_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_button_modern"
            android:layout_marginTop="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/last_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_search_text" />


        <ImageView
            android:id="@+id/empty_history_img"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_search_text" />

        <TextView
            android:id="@+id/empty_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/empty_cronology"
            android:textColor="@color/background"
            android:textSize="14sp"
            android:paddingHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/empty_history_img"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/no_results_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="No results found"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <WebView android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>